# tradepulse

./: .gitignore  README.md
backend/: CMakeLists.txt  config.cpp  config.h  data_source.h  latency.cpp  latency.h  live_feed_coinbase.cpp  live_feed_coinbase.h  main.cpp  market_feed.cpp  market_feed.h  order_book.cpp  order_book.h  replay_feed.cpp  replay_feed.h  strategy.cpp  strategy.h  strategy_mean_reversion.cpp  websocket_server.cpp  websocket_server.h
backend/strategies/: strategy_base.h  strategy_bollinger.cpp  strategy_bollinger.h  strategy_breakout.cpp  strategy_breakout.h  strategy_macd.cpp  strategy_macd.h  strategy_mean_reversion.cpp  strategy_mean_reversion.h  strategy_momentum.cpp  strategy_momentum.h  strategy_rsi.cpp  strategy_rsi.h  strategy_vwap_reversion.cpp  strategy_vwap_reversion.h
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: LatencyChart.tsx  PnLChart.tsx  TradeStream.tsx
frontend/pages/: dashboard.tsx  index.tsx
frontend/styles/: globals.css
frontend/utils/: websocket.ts
